corpus/custom.txt
================================================================================
VALID - empty file
================================================================================

--------------------------------------------------------------------------------

(file)

================================================================================
INVALID - key/value pair - multiline string for keys are not allowed
================================================================================

"""
invalid
multiline
basic
key
""" = false

'''
invalid
multiline
literal
key
''' = false

--------------------------------------------------------------------------------

(file
  (pair
    (key) (ERROR) (boolean)
  )
  (pair
    (key) (ERROR) (boolean)
  )
)

================================================================================
INVALID - float - whitespaces between its components are not allowed
================================================================================

invalid_fractional = 1 .0
invalid_exponent = 1 e 2
invalid_both = 1 .0 e 2

--------------------------------------------------------------------------------

(file
  (ERROR
    (dotted_key
      (key) (ERROR) (key)
    )
  )
)

================================================================================
INVALID - offset date time - whitespaces between its components are not allowed
================================================================================

invalid1 = 1979-05-27  07:32:00 Z
invalid2 = 1979-05-27 T 07:32:00 Z

--------------------------------------------------------------------------------

(file
  (ERROR
    (key) (ERROR) (local_time) (local_time)
  )
)

================================================================================
INVALID - local date time - whitespaces between its components are not allowed
================================================================================

invalid1 = 1979-05-27  07:32:00
invalid2 = 1979-05-27 T 07:32:00

--------------------------------------------------------------------------------

(file
  (pair
    (key) (ERROR) (local_time)
  )
  (pair
    (key) (ERROR) (local_time)
  )
)

================================================================================
VALID - local date - trailing whitespaces are allowed
================================================================================

valid = 1979-05-27 

--------------------------------------------------------------------------------

(file
  (ERROR
    (key)
  )
)

================================================================================
INVALID - table - multiline string for header keys are not allowed
================================================================================

["""
invalid
multiline
basic
key
"""]

['''
invalid
multiline
basic
key
''']

--------------------------------------------------------------------------------

(file
  (table
    (key) (ERROR)
  )
  (table
    (key) (ERROR)
  )
)

================================================================================
INVALID - inline table - newlines outside of pairs are not allowed
================================================================================

key = {
  newline = true
}

--------------------------------------------------------------------------------

(file
  (pair
    (key)
    (inline_table
      (ERROR)
      (pair
        (key) (boolean)
      )
      (ERROR)
    )
  )
)

================================================================================
INVALID - array of tables - multiline string for header keys are not allowed
================================================================================

[["""
invalid
multiline
basic
key
"""]]

[['''
invalid
multiline
basic
key
''']]

--------------------------------------------------------------------------------

(file
  (ERROR
    (key) (key)
  )
)

================================================================================
VALID - table - empty content separated by comments
================================================================================

[table]

# comment

--------------------------------------------------------------------------------

(file
  (table
    (key)
  )
  (comment)
)

================================================================================
VALID - array of tables - empty content separated by comments
================================================================================

[[array-table]]

# comment

--------------------------------------------------------------------------------

(file
  (table_array
    (key)
  )
  (comment)
)

================================================================================
VALID - table - two pairs separated by comments
================================================================================

[table]

a = 1

# comment

b = 2

--------------------------------------------------------------------------------

(file
  (table
    (key)
  )
  (pair
    (key) (integer)
  )
  (comment)
  (pair
    (key) (integer)
  )
)

================================================================================
VALID - array of tables - two pairs separated by comments
================================================================================

[[array-table]]

a = 1

# comment

b = 2

--------------------------------------------------------------------------------

(file
  (table_array
    (key)
  )
  (pair
    (key) (integer)
  )
  (comment)
  (pair
    (key) (integer)
  )
)
