corpus/issues.txt
================================================================================
VALID - issue #17 - immediate hash in string is considered content instead of comment
================================================================================

# This is a full-line comment
key = "value"  # This is a comment at the end of a line
another = "# This is not a comment"

--------------------------------------------------------------------------------

(document
  (comment)
  (pair
    (bare_key)
    (string)
    (comment))
  (ERROR
    (bare_key)
    (comment)))
